--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,17 +20,23 @@ button {
   cursor: pointer;
 }
 
-a {
+.link{
     color: #3aa0e4;
     text-decoration: none;
     font-size: large;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
 }
-a:hover{
+.link:hover{
     color: #F7F7F7;
     background: #3aa0e4;
     padding: 5px;
+}
+#save{
+    color: #d6ebf8;
+    text-decoration: none;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
 }
 
 /* Container */
